# accesscontrol_sandbox_manager

./: AGENTS.md  BUILD.gn  CLAUDE.md  README_zh.md  bundle.json  hisysevent.yaml  sandbox_manager.gni
frameworks/inner_api/sandbox_manager/: BUILD.gn
frameworks/inner_api/sandbox_manager/include/: sandbox_manager_client.h  sandbox_manager_proxy.h
frameworks/inner_api/sandbox_manager/src/: sandbox_manager_client.cpp  sandbox_manager_kit.cpp  sandbox_manager_proxy.cpp
frameworks/inner_api/sandbox_manager/test/: BUILD.gn
frameworks/sandbox_manager/: BUILD.gn  ISandboxManager.idl
frameworks/sandbox_manager/include/: bool_vec_raw_data.h  i_sandbox_manager.h  policy_vec_raw_data.h  sandbox_manager_dfx_helper.h  sandboxmanager_service_ipc_interface_code.h  set_info_parcel.h  shared_directory_info_vec_raw_data.h  uint32_vec_raw_data.h
frameworks/sandbox_manager/src/: policy_info_parcel.cpp  policy_info_vector_parcel.cpp  sandbox_manager_dfx_helper.cpp  sandbox_manager_log.cpp  set_info_parcel.cpp
modules/claw_sandbox/: BUILD.gn
modules/claw_sandbox/etc/: claw_sandbox_template.json  claw_sandbox_template_cli.json  claw_sandbox_template_shell.json
modules/claw_sandbox/include/: sandbox_aids.h  sandbox_cmd_parser.h  sandbox_error.h  sandbox_exec.h  sandbox_log.h  sandbox_manager.h
modules/claw_sandbox/sandbox/: command_parser.cpp  command_parser.h  sandbox_config.h  sandbox_loader.cpp  sandbox_log.h  sandbox_manager.cpp  sandbox_manager.h
modules/claw_sandbox/src/: sandbox_aids.cpp  sandbox_aids_default.cpp  sandbox_cmd_parser.cpp  sandbox_config_parser.cpp  sandbox_exec.cpp  sandbox_loader.cpp  sandbox_manager.cpp  sandbox_mount.cpp
modules/claw_sandbox/test/: BUILD.gn
modules/claw_sandbox/test/unittest/include/: claw_sandbox_aids_test.h  claw_sandbox_cmd_parser_test.h  claw_sandbox_config_parser_test.h  claw_sandbox_exec_test.h  claw_sandbox_manager_test.h  claw_sandbox_mount_test.h  sandbox_mock_state.h
modules/claw_sandbox/test/unittest/src/: claw_sandbox_aids_test.cpp  claw_sandbox_cmd_parser_test.cpp  claw_sandbox_config_parser_test.cpp  claw_sandbox_exec_test.cpp  claw_sandbox_manager_test.cpp  claw_sandbox_mount_test.cpp  execvp_mock_stub.cpp  ioctl_mock_stub.cpp  sandbox_manager_mock_stub.cpp
services/common/: AGENTS.md  BUILD.gn
services/common/database/src/: sqlite_helper.cpp  statement.cpp
services/common/utils/: data_size_report_adapter.cpp  sandbox_memory_manager.cpp  sandbox_memory_manager.h
services/sandbox_manager/: AGENTS.md  BUILD.gn  sandbox_manager_service.cfg
services/sandbox_manager/main/sa_profile/: BUILD.gn  sandbox_manager_service.json
services/sandbox_manager/main/sa_profile/proc_non_resident/: sandbox_manager_service.json
services/sandbox_manager/main/sa_profile/proc_resident/: sandbox_manager_service.json
services/sandbox_manager/proc_non_resident_cfg/: sandbox_manager_service.cfg
services/sandbox_manager/proc_resident_cfg/: sandbox_manager_service.cfg
services/sandbox_manager/test/: BUILD.gn
services/sandbox_manager/test/mock/include/: ability_manager_client.h  dec_test.h  media_library_extend_manager.h  media_permission_helper.h
services/sandbox_manager/test/mock/src/: dec_test.cpp  media_path_mock.cpp
services/sandbox_manager/test/unittest/: dec_testcase.cpp  dec_testcase_ext.cpp  mac_adapter_test.cpp  media_path_mock_test.cpp  policy_info_manager_extended_test.cpp  policy_info_manager_test.cpp  policy_trie_test.cpp  sandbox_manager_db_test.cpp  sandbox_manager_rdb_test.cpp  sandbox_manager_service_sharefiles_test.cpp  sandbox_manager_service_test.cpp  sandbox_param_validator_test.cpp  sniff_test.cpp
test/fuzztest/innerkits/sandbox_manager/: BUILD.gn
test/fuzztest/innerkits/sandbox_manager/checkpersistpolicy_fuzzer/: BUILD.gn  checkpersistpolicy_fuzzer.cpp
test/fuzztest/innerkits/sandbox_manager/checkpolicy_fuzzer/: BUILD.gn  checkpolicy_fuzzer.cpp  checkpolicy_fuzzer.h
test/fuzztest/innerkits/sandbox_manager/cleanpersistpolicybypath_fuzzer/: BUILD.gn  cleanpersistpolicybypath_fuzzer.cpp  cleanpersistpolicybypath_fuzzer.h
test/fuzztest/innerkits/sandbox_manager/cleanpolicybyuserid_fuzzer/: BUILD.gn  cleanpolicybyuserid_fuzzer.cpp  cleanpolicybyuserid_fuzzer.h
test/fuzztest/innerkits/sandbox_manager/persistpolicy_fuzzer/: BUILD.gn  persistpolicy_fuzzer.cpp
test/fuzztest/innerkits/sandbox_manager/persistpolicytoken_fuzzer/: BUILD.gn  persistpolicytoken_fuzzer.cpp
test/fuzztest/innerkits/sandbox_manager/setdenypolicy_fuzzer/: BUILD.gn  setdenypolicy_fuzzer.cpp  setdenypolicy_fuzzer.h
test/fuzztest/innerkits/sandbox_manager/setpolicy_fuzzer/: BUILD.gn  setpolicy_fuzzer.cpp
test/fuzztest/innerkits/sandbox_manager/setpolicyasync_fuzzer/: BUILD.gn  setpolicyasync_fuzzer.cpp  setpolicyasync_fuzzer.h
test/fuzztest/innerkits/sandbox_manager/setpolicybybundlename_fuzzer/: BUILD.gn  setpolicybybundlename_fuzzer.cpp  setpolicybybundlename_fuzzer.h
test/fuzztest/innerkits/sandbox_manager/startaccessingbytokenid_fuzzer/: BUILD.gn  startaccessingbytokenid_fuzzer.cpp  startaccessingbytokenid_fuzzer.h
test/fuzztest/innerkits/sandbox_manager/startaccessingpolicy_fuzzer/: BUILD.gn  startaccessingpolicy_fuzzer.cpp
test/fuzztest/innerkits/sandbox_manager/stopaccessingpolicy_fuzzer/: BUILD.gn  stopaccessingpolicy_fuzzer.cpp
test/fuzztest/innerkits/sandbox_manager/unpersistpolicy_fuzzer/: BUILD.gn  unpersistpolicy_fuzzer.cpp
test/fuzztest/innerkits/sandbox_manager/unpersistpolicytoken_fuzzer/: BUILD.gn  unpersistpolicytoken_fuzzer.cpp
test/fuzztest/innerkits/sandbox_manager/unsetallpolicybytoken_fuzzer/: BUILD.gn  unsetallpolicybytoken_fuzzer.cpp  unsetallpolicybytoken_fuzzer.h
test/fuzztest/innerkits/sandbox_manager/unsetdenypolicy_fuzzer/: BUILD.gn  unsetdenypolicy_fuzzer.cpp  unsetdenypolicy_fuzzer.h
test/fuzztest/innerkits/sandbox_manager/unsetpolicy_fuzzer/: BUILD.gn  unsetpolilcy_fuzzer.cpp  unsetpolilcy_fuzzer.h
test/fuzztest/innerkits/sandbox_manager/unsetpolicyasync_fuzzer/: BUILD.gn  (+2 more)
test/fuzztest/services/sandbox_manager/: BUILD.gn  sandbox_manager_service_fuzz.gni
(+177 files in other folders)
