# Copyright (c) 2026 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//build/ohos.gni")
import("//build/ohos_var.gni")
import("../../sandbox_manager.gni")

if(!defined(ohos_lite)) {
  ohos_executable("claw_sandbox") {
    sources = [
      "src/sandbox_loader.cpp",
      "src/sandbox_cmd_parser.cpp",
      "src/sandbox_manager.cpp",
      "src/sandbox_exec.cpp",
      "src/sandbox_mount.cpp",
      "src/sandbox_config_parser.cpp",
    ]

    if (sandbox_manager_enable_aids) {
      sources += [
        "src/sandbox_aids.cpp",
      ]
    } else {
      sources += [
        "src/sandbox_aids_default.cpp",
      ]
    }

    include_dirs = [
      "include",
    ]

    branch_protector_ret = "pac_ret"
    stack_protector_ret = true

    sanitize = {
      cfi = true
      cfi_cross_dso = true
      debug = false
    }

    cflags = [
      "-fPIC",
      "-g",
      "-Wall",
      "-std=c++17",
    ]

    cflags_cc = [
      "-Os",
      "-flto=thin",
      "-fno-rtti",
      "-fno-exceptions",
      "-fno-unwind-tables",
      "-fno-asynchronous-unwind-tables",
      "-fvisibility=hidden",
      "-fvisibility-inlines-hidden",
      "-fdata-sections",
      "-ffunction-sections",
    ]

    ldflags = [
      "-flto=thin",
      "-Wl,-s",
      "-Wl,--as-needed",
      "-Wl,--gc-sections",
    ]

    if (target_cpu == "arm") {
      cflags += [ "-DBINDER_IPC_32BIT" ]
    }

    external_deps = [
      "access_token:libaccesstoken_sdk",
      "access_token:libtokenid_sdk",
      "access_token:libtokensetproc_shared",
      "bounds_checking_function:libsec_shared",
      "cJSON:cjson",
      "hilog:libhilog",
      "ipc:ipc_single",
      "init:libbegetutil",
      "c_utils:utils",
      "selinux:libselinux",
    ]

    defines = [
      "SANDBOX_STUB_MAINTHREAD",
    ]
    if (sandbox_manager_pc_platform) {
      defines += [ "CONFIG_PC_PLATFORM" ]
    }
    if (claw_sandbox_mcs_enable) {
      defines += [ "MCS_ENABLE" ]
    }
    if (!is_emulator && claw_sandbox_need_set_seccomp) {
      defines += [ "WITH_SECCOMP" ]
      external_deps += [ "init:seccomp" ]
    }

    install_enable = true
    part_name = "sandbox_manager"
    subsystem_name = "accesscontrol"
  }

  ohos_prebuilt_etc("claw_sandbox_template_cli") {
    relative_install_dir = "sandbox"
    source = "etc/claw_sandbox_template_cli.json"
    part_name = "sandbox_manager"
    subsystem_name = "accesscontrol"
  }

  ohos_prebuilt_etc("claw_sandbox_template_shell") {
    relative_install_dir = "sandbox"
    source = "etc/claw_sandbox_template_shell.json"
    part_name = "sandbox_manager"
    subsystem_name = "accesscontrol"
  }
}
