# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("../../sandbox_manager.gni")

ohos_shared_library("sandbox_manager_service_common") {
  subsystem_name = "accesscontrol"
  part_name = "sandbox_manager"

  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }
  branch_protector_ret = "pac_ret"

  include_dirs = [
    "${sandbox_manager_path}/frameworks/common/include",
    "${sandbox_manager_path}/interfaces/inner_api/sandbox_manager/include",
    "database/include",
    "utils",
  ]

  sources = [
    "database/src/generic_values.cpp",
    "database/src/variant_value.cpp",
    "utils/data_size_report_adapter.cpp",
  ]

  cflags_cc = [ "-DHILOG_ENABLE" ]
  configs = [ "${sandbox_manager_path}/config:coverage_flags" ]

  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
    "hisysevent:libhisysevent",
    "ipc:ipc_core",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
  ]
}
