# Copyright (c) 2023-2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("../../sandbox_manager.gni")

ohos_prebuilt_etc("sandbox_manager_service.rc") {
  if (sandbox_manager_process_resident) {
    source = "proc_resident_cfg/sandbox_manager_service.cfg"
  } else {
    source = "proc_non_resident_cfg/sandbox_manager_service.cfg"
  }
  relative_install_dir = "init"
  subsystem_name = "accesscontrol"
  part_name = "sandbox_manager"
}

if (is_standard_system) {
  ohos_shared_library("sandbox_manager_service") {
    subsystem_name = "accesscontrol"
    part_name = "sandbox_manager"
    if (!use_clang_coverage) {
      version_script = "sandbox_manager_service.map"
    }

    sanitize = {
      cfi = true
      cfi_cross_dso = true
      debug = false
    }
    branch_protector_ret = "pac_ret"

    include_dirs = [
      "${sandbox_manager_path}/frameworks/sandbox_manager/include",
      "${sandbox_manager_path}/frameworks/common/include",
      "${sandbox_manager_path}/interfaces/inner_api/sandbox_manager/include",
      "${sandbox_manager_path}/services/common/database/include",
      "${sandbox_manager_path}/services/common/utils",
      "main/cpp/include/service",
      "main/cpp/include/sensitive",
      "main/cpp/include/database",
      "main/cpp/include/mac",
      "main/cpp/include/media",
    ]

    sources = [
      "main/cpp/src/database/policy_field_const.cpp",
      "main/cpp/src/database/sandbox_manager_rdb.cpp",
      "main/cpp/src/database/sandbox_manager_rdb_open_callback.cpp",
      "main/cpp/src/database/sandbox_manager_rdb_utils.cpp",
      "main/cpp/src/mac/mac_adapter.cpp",
      "main/cpp/src/media/media_path_support.cpp",
      "main/cpp/src/sensitive/sandbox_manager_event_subscriber.cpp",
      "main/cpp/src/service/policy_info_manager.cpp",
      "main/cpp/src/service/policy_trie.cpp",
      "main/cpp/src/service/sandbox_manager_service.cpp",
    ]

    cflags_cc = [ "-DHILOG_ENABLE" ]
    if (!sandbox_manager_process_resident) {
      cflags_cc += [ "-DNOT_RESIDENT" ]
      cflags_cc += [ "-DMEMORY_MANAGER_ENABLE" ]
    }

    configs = [ "${sandbox_manager_path}/config:coverage_flags" ]

    deps = [
      "${sandbox_manager_path}/frameworks/sandbox_manager:sandbox_manager_communication_adapter_cxx",
      "${sandbox_manager_path}/frameworks/sandbox_manager:sandbox_manager_stub",
      "${sandbox_manager_path}/services/common:sandbox_manager_service_common",
      "${sandbox_manager_path}/services/sandbox_manager:sandbox_manager_service.rc",
    ]

    external_deps = [
      "ability_base:want",
      "access_token:libaccesstoken_sdk",
      "appspawn:appspawn_dec_util",
      "bundle_framework:appexecfwk_base",
      "bundle_framework:appexecfwk_core",
      "cJSON:cjson",
      "c_utils:utils",
      "common_event_service:cesfwk_core",
      "common_event_service:cesfwk_innerkits",
      "config_policy:configpolicy_util",
      "data_share:datashare_consumer",
      "eventhandler:libeventhandler",
      "hilog:libhilog",
      "ipc:ipc_core",
      "media_library:media_library_extend_manager",
      "os_account:os_account_innerkits",
      "relational_store:native_rdb",
      "safwk:system_ability_fwk",
      "samgr:samgr_proxy",
    ]
  }
}
