# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("../../../sandbox_manager.gni")

config("sandbox_manager") {
  visibility = [ ":*" ]
  include_dirs = [ "${sandbox_manager_path}/interfaces/inner_api/sandbox_manager/include" ]
}

if (is_standard_system) {
  ohos_shared_library("libsandbox_manager_sdk") {
    subsystem_name = "accesscontrol"
    part_name = "sandbox_manager"
    innerapi_tags = [
      "platformsdk",
      "sasdk",
    ]
    if (!use_clang_coverage) {
      version_script = "${sandbox_manager_path}/interfaces/inner_api/sandbox_manager/libsandbox_manager_sdk.map"
    }

    sanitize = {
      cfi = true
      cfi_cross_dso = true
      debug = false
    }
    branch_protector_ret = "pac_ret"

    output_name = "libsandbox_manager_sdk"

    public_configs = [ ":sandbox_manager" ]

    include_dirs = [
      "${sandbox_manager_path}/frameworks/sandbox_manager/include",
      "${sandbox_manager_path}/frameworks/common/include",
      "${sandbox_manager_path}/frameworks/inner_api/sandbox_manager/include",
      "src",
      "include",
    ]

    sources = [
      "${sandbox_manager_path}/frameworks/inner_api/sandbox_manager/src/sandbox_manager_client.cpp",
      "${sandbox_manager_path}/frameworks/inner_api/sandbox_manager/src/sandbox_manager_kit.cpp",
      "${sandbox_manager_path}/frameworks/inner_api/sandbox_manager/src/sandbox_manager_proxy.cpp",
    ]

    deps = [ "${sandbox_manager_path}/frameworks/sandbox_manager:sandbox_manager_communication_adapter_cxx" ]

    external_deps = [
      "c_utils:utils",
      "common_event_service:cesfwk_innerkits",
      "hilog:libhilog",
      "ipc:ipc_single",
      "samgr:samgr_proxy",
    ]

    configs = [ "${sandbox_manager_path}/config:coverage_flags" ]

    cflags_cc = [
      "-DHILOG_ENABLE",
      "-DDEBUG_API_PERFORMANCE",
    ]
  }
}
