# Copyright (c) 2026 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
import("../../../sandbox_manager.gni")

ohos_unittest("claw_sandbox_test") {
  subsystem_name = "accesscontrol"
  module_out_path = "sandbox_manager/claw_sandbox"

  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }
  branch_protector_ret = "pac_ret"

  include_dirs = [
    "${sandbox_manager_path}/modules/claw_sandbox/include",
    "unittest/include",
  ]

  sources = [
    "${sandbox_manager_path}/modules/claw_sandbox/src/sandbox_cmd_parser.cpp",
    "${sandbox_manager_path}/modules/claw_sandbox/src/sandbox_manager.cpp",
    "${sandbox_manager_path}/modules/claw_sandbox/src/sandbox_exec.cpp",
    "unittest/src/claw_sandbox_cmd_parser_test.cpp",
    "unittest/src/claw_sandbox_manager_test.cpp",
    "unittest/src/claw_sandbox_exec_test.cpp",
  ]

  if (sandbox_manager_enable_aids) {
    sources += [
      "${sandbox_manager_path}/modules/claw_sandbox/src/sandbox_aids.cpp",
    ]
  } else {
    sources += [
      "${sandbox_manager_path}/modules/claw_sandbox/src/sandbox_aids_default.cpp",
    ]
  }

  cflags_cc = [ "-DHILOG_ENABLE" ]

  deps = []

  external_deps = [
    "access_token:libaccesstoken_sdk",
    "access_token:libtokenid_sdk",
    "access_token:libtokensetproc_shared",
    "bounds_checking_function:libsec_shared",
    "cJSON:cjson",
    "c_utils:utils",
    "hilog:libhilog",
    "init:libbegetutil",
    "selinux:libselinux",
    "ipc:ipc_single",
  ]
}

group("unittest") {
  testonly = true
  deps = [ ":claw_sandbox_test" ]
}
