# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
import("../../../../sandbox_manager.gni")

ohos_unittest("libsandbox_manager_sdk_test") {
  subsystem_name = "accesscontrol"
  part_name = "sandbox_manager"
  module_out_path = part_name + "/" + part_name

  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }
  branch_protector_ret = "pac_ret"

  include_dirs = [
    "${sandbox_manager_path}/frameworks/sandbox_manager/include",
    "${sandbox_manager_path}/frameworks/common/include",
    "${sandbox_manager_path}/interfaces/inner_api/sandbox_manager/include",
    "${sandbox_manager_path}/services/sandbox_manager/main/cpp/include/mac",
    "../include",
    "../src",
    "unittest/include",
  ]

  sources = [
    "${sandbox_manager_path}/services/sandbox_manager/main/cpp/src/mac/mac_adapter.cpp",
    "unittest/src/sandbox_manager_kit_coverage_test.cpp",
    "unittest/src/sandbox_manager_kit_test.cpp",
  ]

  cflags_cc = [ "-DHILOG_ENABLE" ]
  if (sandbox_manager_with_dec) {
    cflags_cc += [ "-DDEC_ENABLED" ]
  }
  configs = [ "${sandbox_manager_path}/config:coverage_flags" ]

  deps = [
    "${sandbox_manager_path}/frameworks/inner_api/sandbox_manager/:libsandbox_manager_sdk",
    "${sandbox_manager_path}/frameworks/sandbox_manager:sandbox_manager_communication_adapter_cxx",
  ]

  external_deps = [
    "access_token:libaccesstoken_sdk",
    "access_token:libnativetoken",
    "access_token:libtoken_setproc",
    "cJSON:cjson",
    "c_utils:utils",
    "common_event_service:cesfwk_innerkits",
    "config_policy:configpolicy_util",
    "hilog:libhilog",
    "ipc:ipc_single",
    "samgr:samgr_proxy",
  ]
}

group("unittest") {
  testonly = true
  deps = [ ":libsandbox_manager_sdk_test" ]
}
