# Copyright (c) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("../../../../sandbox_manager.gni")

group("fuzztest") {
  testonly = true
  deps = []

  deps += [
    # deps file
    "checkpersistpolicy_fuzzer:CheckPersistPolicyFuzzTest",
    "checkpolicy_fuzzer:CheckPolicyFuzzTest",
    "cleanpersistpolicybypath_fuzzer:CleanPersistPolicyByPathFuzzTest",
    "persistpolicy_fuzzer:PersistPolicyFuzzTest",
    "persistpolicytoken_fuzzer:PersistPolicyTokenFuzzTest",
    "setpolicy_fuzzer:SetPolicyFuzzTest",
    "setpolicyasync_fuzzer:SetPolicyAsyncFuzzTest",
    "startaccessingbytokenid_fuzzer:StartAccessingByTokenIdFuzzTest",
    "startaccessingpolicy_fuzzer:StartAccessingPolicyFuzzTest",
    "stopaccessingpolicy_fuzzer:StopAccessingPolicyFuzzTest",
    "unpersistpolicy_fuzzer:UnPersistPolicyFuzzTest",
    "unpersistpolicytoken_fuzzer:UnpersistPolicyTokenFuzzTest",
    "unsetallpolicybytoken_fuzzer:UnsetAllPolicyByTokenFuzzTest",
    "unsetpolicy_fuzzer:UnsetPolicyFuzzTest",
    "unsetpolicyasync_fuzzer:UnsetPolicyAsyncFuzzTest",
  ]
}
